--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#dashboard">Dashboard</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">📸 Gallery</a>
+                    </li>
                 </ul>
             </div>
         </div>
